# WEB_HW7

./: alembic.ini  config.ini  docker-compose.yml  main.py  my_select.py  pyproject.toml
alembic/versions/: 817b8b957375_init.py
